<resources xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_label">Messaging</string>
    <string name="new_message">New message</string>
    <string name="menu_call_back">Call <xliff:g id="name">%s</xliff:g></string>
    <string name="menu_send_email">Send email to <xliff:g id="name">%s</xliff:g></string>
    <string name="menu_compose_new">Compose</string>
    <string name="menu_preferences">Settings</string>
    <string name="menu_add_address_to_contacts">Add <xliff:g id="contactEmailOrNumber">%s</xliff:g> to People</string>
    <string name="menu_call">Call</string>
    <string name="menu_search">Search</string>
    <string name="menu_delete_all">Delete all threads</string>
    <string name="menu_delete">Delete thread</string>
    <string name="menu_view">View thread</string>
    <string name="menu_debug_dump">DEBUG DUMP</string>
    <string name="refreshing">Refreshing\u2026</string>
    <string name="menu_cell_broadcasts">Cell broadcasts</string>
    <string name="has_draft">Draft</string>
    <string name="no_subject_view">(No subject)</string>
    <string name="messagelist_sender_self">Me</string>
    <string name="view_slideshow">View slideshow</string>
    <string name="view_message_details">View details</string>
    <string name="view_delivery_report">View report</string>
    <string name="delete_message">Delete</string>
    <string name="expire_on">"Expires: <xliff:g id="date">%s</xliff:g>"</string>
    <string name="kilobyte">KB</string>
    <string name="undelivered_msg_dialog_title">Undelivered message</string>
    <string name="undelivered_msg_dialog_body">Couldn\'t send this message.\nAttempt made: <xliff:g id="message">%s</xliff:g>.</string>
    <string name="undelivered_sms_dialog_body">Couldn\'t send this message.</string>
    <string name="delete_thread">Delete thread</string>
    <string name="menu_forward">Forward</string>
    <string name="download">Download</string>
    <string name="downloading">Downloading</string>
    <string name="inline_subject">"&lt;Subject: <xliff:g id="subject">%s</xliff:g>&gt;"</string>
    <string name="drm_protected_text">"* DRM protected text *"</string>
    <string name="insufficient_drm_rights">Insufficient DRM rights detected.</string>
    <string name="copy_message_text">Copy text</string>
    <string name="message_options">Message options</string>
    <string name="slideshow_options">Slideshow options</string>
    <string name="done">Done</string>
    <string name="move_up">Move up</string>
    <string name="move_down">Move down</string>
    <string name="remove_slide">Remove slide</string>
    <string name="add_slide">Add slide</string>
    <string name="add_slide_hint">Touch to create new slide.</string>
    <string name="discard_slideshow">Discard slideshow</string>
    <string name="slide_show_part">Part <xliff:g id="part">%1$s</xliff:g>/<xliff:g id="total">%2$s</xliff:g></string>
    <string name="remove_text">Remove text</string>
    <string name="add_picture">Add picture</string>
    <string name="remove_picture">Remove picture</string>
    <string name="add_music">Add music</string>
    <string name="remove_music">Remove music</string>
    <string name="add_video">Add video</string>
    <string name="remove_video">Remove video</string>
    <string name="to_hint">To</string>
    <string name="subject_hint">Subject</string>
    <string name="add_attachment">Attach</string>
    <string name="add_subject">Add subject</string>
    <string name="discard">Discard</string>
    <string name="view">View</string>
    <string name="replace">Replace</string>
    <string name="remove">Remove</string>
    <string name="send">Send</string>
    <string name="mms">MMS</string>
    <string name="send_mms">Send MMS</string>
    <string name="all_threads">All threads</string>
    <string name="type_to_compose_text_enter_to_send">Type message</string>
    <string name="open_keyboard_to_compose_message">Open keyboard to type message</string>
    <string name="compressing">Picture too large. Compressing\u2026</string>
    <string name="unsupported_media_format">Unsupported <xliff:g id="name">%1$s</xliff:g> format.</string>
    <string name="select_different_media">Choose a different <xliff:g id="name">%1$s</xliff:g>.</string>
    <string name="exceed_message_size_limitation">Message size limit reached.</string>
    <string name="message_too_big_for_video">The message is too big to attach a video.</string>
    <string name="failed_to_add_media">You can\'t add this <xliff:g id="name">%1$s</xliff:g> to your message.</string>
    <string name="failed_to_resize_image">Picture not resized.</string>
    <string name="resize_image_error_information">This picture is too large to send, even when resized.</string>
    <string name="forward_prefix">Fwd:\u0020</string>
    <string name="discard_message_reason">Your message will be discarded because it has no valid recipients.</string>
    <string name="has_invalid_recipient">Invalid recipient(s): &lt;<xliff:g id="name">%1$s</xliff:g>&gt;</string>
    <string name="invalid_destination">Invalid destination address.</string>
    <string name="service_not_activated">Service not activated on network.</string>
    <string name="service_message_not_found">Message expired or not available.</string>
    <string name="service_network_problem">Couldn\'t send due to network problem.</string>
    <string name="invalid_recipient_message">Correct the recipient(s) or they won\'t receive the message.</string>
    <string name="cannot_send_message">Can\'t send message</string>
    <string name="cannot_send_message_reason">Your message has no valid recipients.</string>
    <string name="cannot_forward_drm_obj">The DRM object included in the message can\'t be forwarded.</string>
    <string name="converting_to_picture_message">Converting to multimedia message\u2026</string>
    <string name="cannot_add_slide_anymore">Can\'t add more slides.</string>
    <string name="cannot_add_picture_and_video">Can\'t add video and picture to one slide.</string>
    <string name="cannot_save_message">Can\'t save message.</string>
    <string name="message_saved_as_draft">Message saved as draft.</string>
    <string name="too_many_recipients">Message has too many recipients (<xliff:g id="currentCount">%1$s</xliff:g>). There is a limit of <xliff:g id="maxLimit">%2$s</xliff:g> recipients.</string>
    <string name="too_many_attachments">There is a limit of <xliff:g id="maxLimit">%1$s</xliff:g> attachments. Only the first <xliff:g id="currentCount">%2$s</xliff:g> will be added.</string>
    <string name="adding_attachments_title">Adding attachments</string>
    <string name="adding_attachments">Wait while the items are added to the slideshow.</string>
    <string name="pref_notification_settings_title">Notifications</string>
    <string name="pref_mms_settings_title">"Multimedia (MMS) messages"</string>
    <string name="pref_sms_settings_title">"Text (SMS) messages"</string>
    <string name="pref_sms_storage_title">Storage</string>
    <string name="pref_summary_manage_sim_messages">Manage messages stored on your SIM card</string>
    <string name="pref_summary_mms_delivery_reports">Request a delivery report for each message you send</string>
    <string name="pref_summary_mms_read_reports">Request a read report for each message you send</string>
    <string name="pref_summary_sms_delivery_reports">Request a delivery report for each message you send</string>
    <string name="pref_summary_auto_delete">Delete old messages as limits are reached</string>
    <string name="pref_summary_delete_limit"><xliff:g id="count">%1$s</xliff:g> messages per conversation</string>
    <string name="pref_summary_mms_group_mms">Use MMS to send a single message when there are multiple recipients</string>
    <string name="pref_title_manage_sim_messages">Manage SIM card messages</string>
    <string name="pref_title_mms_delivery_reports">Delivery reports</string>
    <string name="pref_title_mms_group_mms">Group messaging</string>
    <string name="pref_title_mms_read_reports">Read reports</string>
    <string name="pref_title_sms_delivery_reports">Delivery reports</string>
    <string name="pref_title_auto_delete">Delete old messages</string>
    <string name="pref_title_sms_delete">Text message limit</string>
    <string name="pref_title_mms_delete">Multimedia message limit</string>
    <string name="pref_title_notification_enabled">Notifications</string>
    <string name="pref_title_notification_vibrateWhen">Vibrate</string>
    <string name="pref_title_notification_ringtone">Sound</string>
    <string name="pref_title_mms_auto_retrieval">Auto-retrieve</string>
    <string name="pref_summary_mms_auto_retrieval">Automatically retrieve messages</string>
    <string name="pref_title_mms_retrieval_during_roaming">Roaming auto-retrieve</string>
    <string name="pref_summary_mms_retrieval_during_roaming">Automatically retrieve messages while roaming</string>
    <string name="pref_title_notification_privacy_mode_enabled">Privacy mode</string>
    <string name="pref_summary_notification_privacy_mode_enabled">Hide sender and message in status bar and disable \'Quick reply\'</string>
    <string name="pref_title_mms_notification_vibrate_pattern">Vibrate pattern</string>
    <string name="pref_summary_mms_notification_vibrate_pattern">Change vibrate pattern</string>
    <string name="pref_title_mms_notification_vibrate_call">Vibrate on call</string>
    <string name="pref_summary_mms_notification_vibrate_call">Allow vibrate while on a call</string>
    <string name="pref_quickmessage">Quick reply</string>
    <string name="pref_dark_theme_title">Use dark theme</string>
    <string name="pref_dark_theme_summary">If not selected, the default \'light\' theme will be used</string>
    <string name="pref_quickmessage_title">Show pop-up</string>
    <string name="pref_quickmessage_summary">Display the QuickMessage pop-up for incoming SMS messages</string>
    <string name="pref_wake_unlock_title">Wake and unlock</string>
    <string name="pref_wake_unlock_summary">Wake and unlock device on incoming message (insecure lock screens only)</string>
    <string name="pref_close_all_title">Close all</string>
    <string name="pref_close_all_summary">Close button closes all messages</string>
    <string name="prefs_templates_settings">SMS templates</string>
    <string name="pref_title_templates_manage">Templates</string>
    <string name="pref_summary_templates_manage">Manage your SMS templates</string>
    <string name="pref_title_templates_show_gesture">Gesture</string>
    <string name="pref_summary_templates_show_gesture">Show gesture trace</string>
    <string name="pref_title_template_gestures_sensitivity">Gesture sensitivity</string>
    <string name="pref_extra_settings">Extra settings</string>
    <string name="pref_title_unicode_stripping">Strip unicode</string>
    <string name="pref_title_enable_emojis">Emoji support</string>
    <string name="pref_summary_enable_emojis">Enable support for unicode emojis, a set of 471 nice emoticons</string>
    <string name="pref_title_enable_softbank_encoding">SoftBank emoji</string>
    <string name="pref_summary_enable_softbank_encoding">Use SoftBank emoji encoding</string>
    <string name="pref_title_mms_full_timestamp">Full timestamps</string>
    <string name="pref_summary_mms_full_timestamp">Display both date and time in timestamps</string>
    <string name="pref_title_mms_use_sent_timestamp">Original timestamps</string>
    <string name="pref_summary_mms_use_sent_timestamp">Display sent date instead of received date in timestamps</string>
    <string name="pref_title_input_type">Soft keyboard type</string>
    <string name="pref_title_sms_split_counter">Split counter</string>
    <string name="pref_summary_sms_split_counter">Adds counter to message ex. (1/2)</string>
</resources>