<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * Copyright (C) 2007-2008 Esmertec AG.
 * Copyright (C) 2007-2008 The Android Open Source Project
 * QuickMessage: Copyright (C) 2012 The CyanogenMod Project (DvTonder)
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:key="pref_key_storage_settings"
        android:title="@string/pref_sms_storage_title" >

        <!--
        <Preference
            android:key="pref_key_mms_clear_history"
            android:title="@string/pref_mms_clear_search_history_title"
            android:summary="@string/pref_mms_clear_search_history_summary" />
        -->
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_key_auto_delete"
            android:summary="@string/pref_summary_auto_delete"
            android:title="@string/pref_title_auto_delete" />

        <Preference
            android:dependency="pref_key_auto_delete"
            android:key="pref_key_sms_delete_limit"
            android:persistent="false"
            android:summary="@string/pref_summary_delete_limit"
            android:title="@string/pref_title_sms_delete" />
        <Preference
            android:dependency="pref_key_auto_delete"
            android:key="pref_key_mms_delete_limit"
            android:persistent="false"
            android:summary="@string/pref_summary_delete_limit"
            android:title="@string/pref_title_mms_delete" />
    </PreferenceCategory>

    <!-- SMS Settings -->
    <PreferenceCategory
        android:key="pref_key_sms_settings"
        android:title="@string/pref_sms_settings_title" >
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_key_sms_delivery_reports"
            android:summary="@string/pref_summary_sms_delivery_reports"
            android:title="@string/pref_title_sms_delivery_reports" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_key_sms_split_counter"
            android:summary="@string/pref_summary_sms_split_counter"
            android:title="@string/pref_title_sms_split_counter" />

        <Preference
            android:key="pref_key_manage_sim_messages"
            android:summary="@string/pref_summary_manage_sim_messages"
            android:title="@string/pref_title_manage_sim_messages" />
    </PreferenceCategory>

    <!-- MMS Settings -->
    <PreferenceCategory
        android:key="pref_key_mms_settings"
        android:title="@string/pref_mms_settings_title" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_key_mms_group_mms"
            android:summary="@string/pref_summary_mms_group_mms"
            android:title="@string/pref_title_mms_group_mms" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_key_mms_delivery_reports"
            android:summary="@string/pref_summary_mms_delivery_reports"
            android:title="@string/pref_title_mms_delivery_reports" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_key_mms_read_reports"
            android:summary="@string/pref_summary_mms_read_reports"
            android:title="@string/pref_title_mms_read_reports" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_key_mms_auto_retrieval"
            android:summary="@string/pref_summary_mms_auto_retrieval"
            android:title="@string/pref_title_mms_auto_retrieval" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:dependency="pref_key_mms_auto_retrieval"
            android:key="pref_key_mms_retrieval_during_roaming"
            android:layout="?android:attr/preferenceLayoutChild"
            android:summary="@string/pref_summary_mms_retrieval_during_roaming"
            android:title="@string/pref_title_mms_retrieval_during_roaming" />
    </PreferenceCategory>

    <!-- Notification Settings -->
    <PreferenceCategory android:title="@string/pref_notification_settings_title" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_key_enable_notifications"
            android:title="@string/pref_title_notification_enabled" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:dependency="pref_key_enable_notifications"
            android:key="pref_key_enable_privacy_mode"
            android:layout="?android:attr/preferenceLayoutChild"
            android:summary="@string/pref_summary_notification_privacy_mode_enabled"
            android:title="@string/pref_title_notification_privacy_mode_enabled" />

        <RingtonePreference
            android:defaultValue="content://settings/system/notification_sound"
            android:dependency="pref_key_enable_notifications"
            android:key="pref_key_ringtone"
            android:ringtoneType="notification"
            android:title="@string/pref_title_notification_ringtone" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:dependency="pref_key_enable_notifications"
            android:key="pref_key_vibrate"
            android:title="@string/pref_title_notification_vibrateWhen" />

        <com.android.mms.preferences.CustomVibrateListPreference
            android:defaultValue=""
            android:dependency="pref_key_vibrate"
            android:dialogTitle="@string/pref_title_mms_notification_vibrate_pattern"
            android:entries="@array/pref_mms_notification_vibrate_pattern_entries"
            android:entryValues="@array/pref_mms_notification_vibrate_pattern_values"
            android:key="pref_key_mms_notification_vibrate_pattern"
            android:layout="?android:attr/preferenceLayoutChild"
            android:summary="@string/pref_summary_mms_notification_vibrate_pattern"
            android:title="@string/pref_title_mms_notification_vibrate_pattern" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:dependency="pref_key_enable_notifications"
            android:key="pref_key_mms_notification_vibrate_call"
            android:layout="?android:attr/preferenceLayoutChild"
            android:summary="@string/pref_summary_mms_notification_vibrate_call"
            android:title="@string/pref_title_mms_notification_vibrate_call" />
    </PreferenceCategory>

    <!-- QuickMessage settings -->
    <PreferenceCategory android:title="@string/pref_quickmessage" >
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_dark_theme"
            android:summary="@string/pref_dark_theme_summary"
            android:title="@string/pref_dark_theme_title" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:dependency="pref_key_enable_notifications"
            android:key="pref_key_quickmessage"
            android:summary="@string/pref_quickmessage_summary"
            android:title="@string/pref_quickmessage_title" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:dependency="pref_key_quickmessage"
            android:key="pref_key_qm_lockscreen"
            android:layout="?android:attr/preferenceLayoutChild"
            android:summary="@string/pref_wake_unlock_summary"
            android:title="@string/pref_wake_unlock_title" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:dependency="pref_key_quickmessage"
            android:key="pref_key_close_all"
            android:layout="?android:attr/preferenceLayoutChild"
            android:summary="@string/pref_close_all_summary"
            android:title="@string/pref_close_all_title" />
    </PreferenceCategory>

    <!-- Templates Settings -->
    <PreferenceCategory android:title="@string/prefs_templates_settings" >
        <Preference
            android:key="pref_key_templates_manage"
            android:persistent="false"
            android:summary="@string/pref_summary_templates_manage"
            android:title="@string/pref_title_templates_manage" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_key_templates_show_gesture"
            android:summary="@string/pref_summary_templates_show_gesture"
            android:title="@string/pref_title_templates_show_gesture" />

        <ListPreference
            android:entries="@array/pref_templates_gestures_sensitivity_entries"
            android:entryValues="@array/pref_templates_gestures_sensitivity_values"
            android:key="pref_key_templates_gestures_sensitivity"
            android:title="@string/pref_title_template_gestures_sensitivity" />
    </PreferenceCategory>

    <!-- Extra Settings -->
    <PreferenceCategory android:title="@string/pref_extra_settings" >
        <ListPreference
            android:entries="@array/pref_unicode_stripping_entries"
            android:entryValues="@array/pref_unicode_stripping_values"
            android:key="pref_key_unicode_stripping"
            android:title="@string/pref_title_unicode_stripping" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_key_enable_emojis"
            android:summary="@string/pref_summary_enable_emojis"
            android:title="@string/pref_title_enable_emojis" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:dependency="pref_key_enable_emojis"
            android:key="pref_key_enable_quick_emojis"
            android:layout="?android:attr/preferenceLayoutChild"
            android:summary="@string/pref_summary_enable_quick_emojis"
            android:title="@string/pref_title_enable_quick_emojis" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:dependency="pref_key_enable_emojis"
            android:key="pref_key_enable_softbank_encoding"
            android:layout="?android:attr/preferenceLayoutChild"
            android:summary="@string/pref_summary_enable_softbank_encoding"
            android:title="@string/pref_title_enable_softbank_encoding" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_key_mms_full_timestamp"
            android:summary="@string/pref_summary_mms_full_timestamp"
            android:title="@string/pref_title_mms_full_timestamp" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_key_mms_use_sent_timestamp"
            android:summary="@string/pref_summary_mms_use_sent_timestamp"
            android:title="@string/pref_title_mms_use_sent_timestamp" />

        <ListPreference
            android:entries="@array/pref_entries_input_type"
            android:entryValues="@array/pref_values_input_type"
            android:key="pref_key_mms_input_type"
            android:title="@string/pref_title_input_type" />
    </PreferenceCategory>
    <!-- Text sizes -->
    <PreferenceCategory android:title="@string/pref_text_sizes" >
        <ListPreference
            android:entries="@array/pref_entries_conv_text_size"
            android:entryValues="@array/pref_values_conv_text_size"
            android:key="pref_key_conv_text_size"
            android:title="@string/pref_title_conv_text_size" />
        <ListPreference
            android:entries="@array/pref_entries_conv_date_size"
            android:entryValues="@array/pref_values_conv_date_size"
            android:key="pref_key_conv_date_size"
            android:title="@string/pref_title_conv_date_size" />
        <ListPreference
            android:entries="@array/pref_entries_conv_list_subj_size"
            android:entryValues="@array/pref_values_conv_list_subj_size"
            android:key="pref_key_conv_list_subj_size"
            android:title="@string/pref_title_conv_list_subj_size" />
        <ListPreference
            android:entries="@array/pref_entries_conv_list_name_size"
            android:entryValues="@array/pref_values_conv_list_name_size"
            android:key="pref_key_conv_list_name_size"
            android:title="@string/pref_title_conv_list_name_size" />
        <ListPreference
            android:entries="@array/pref_entries_conv_list_date_size"
            android:entryValues="@array/pref_values_conv_list_date_size"
            android:key="pref_key_conv_list_date_size"
            android:title="@string/pref_title_conv_list_date_size" />
        <ListPreference
            android:entries="@array/pref_entries_conv_compose_text_size"
            android:entryValues="@array/pref_values_conv_compose_text_size"
            android:key="pref_key_conv_compose_text_size"
            android:title="@string/pref_title_conv_compose_text_size" />
    </PreferenceCategory>

</PreferenceScreen>